--- a/cartao_.html
+++ b/cartao_.html
@@ -1207,6 +1207,75 @@
 	</span>
 </article>
 
+<article class="container"> <!-- tabela 016 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 047 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CS4X0100.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CS4X0100</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,67</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>67,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>63,80</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 048 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CS4X0250.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CS4X0250</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,29</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>72,00</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>68,40</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 049 -->
+			<table class="table bg-white mt-3">
+				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+				<tr><th colspan="2"><img src="cta/CS4X1100.jpg" class="mx-auto d-block"></th></tr>
+				<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CS4X1100</strong></button></th></tr>
+				<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+				<tr><th>COR</th><td><button class="btn btn-info disabled btn-sm">4x1 </button></td></tr>
+				<tr><th>QUANTIDADE</th><td>100</td></tr>
+				<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+				<tr><th>UNIDADE</th><td>R$ 0,47</td></tr>
+				<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+					<strong>46,80</strong></button></a></td></tr>
+				<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>44,45</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+
+
 
 
 </body>
