atualização da lista de papeis

--- a/cartao_.html
+++ b/cartao_.html
@@ -15,7 +15,7 @@
 
 <body class="container bg-warning mt-5">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light"> <!-- menu -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3" style="border-radius:0.5rem;"> <!-- menu -->
   <div class="container-fluid">
 
   	 <a class="navbar-brand" href="#">
@@ -46,15 +46,13 @@
 </nav>
 
 
-<hr>
+<!-- <hr> -->
 
 <h1 class="text-center"><strong>Cartões de Visita - dê um <i>"Tchan!"</i> no primeiro impacto</strong></h1>
-<h3 class="text-center"><i>confira abaixo a lista de papeis ofertados pela LABE</i></h3>
-
-<hr>
+<h3 class="text-center mb-4"><i>confira abaixo a lista de papeis ofertados pela LABE</i></h3>
 	
 <!-- lista de papeis -->
-<ol class="list-group list-group-numbered">
+<!-- <ol class="list-group list-group-numbered">
   <li class="list-group-item d-flex justify-content-between align-items-start">
     <div class="ms-2 me-auto">
       <div class="fw-bold">Art Premium 250g</div>
@@ -111,9 +109,231 @@
       <div class="fw-bold">Supremo 250g</div>
     </div>
   </li>
-</ol>
+</ol> -->
+
+<!-- <hr> -->
+
+<article class="container"> <!-- linha001 -->
+	<span class="row">
+		
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-primary" style="height: 5.5rem;">Papel Couchê 210g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+		
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-primary" style="height: 5.5rem;">Papel Couchê 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+		
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-primary" style="height: 5.5rem;">Papel Couchê 275g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+		
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-primary" style="height: 5.5rem;">Papel Couchê 300g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+		
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-warning" style="height: 5.5rem;">Golden Master 300g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+		
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-warning" style="height: 5.5rem;">Papel Pero Plus 300g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha002 -->
+	<span class="row">
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-warning" style="height: 5.5rem;">Papel Silver Plus 300g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-warning" style="height: 5.5rem;">Papel Metalizado 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-warning" style="height: 5.5rem;">Papel Aspen 240g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-success" style="height: 5.5rem;">Papel Kraft 240g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-success" style="height: 5.5rem;">Papel Reciclato 240g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-success" style="height: 5.5rem;">Papel Reciclato 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha003 -->
+	<span class="row">
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-success" style="height: 5.5rem;">Papel Supremo 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-dark" style="height: 5.5rem;">Papel Duo Design 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-dark" style="height: 5.5rem;">Papel Art Premium 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-dark" style="height: 5.5rem;">Papel Offset 180g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-dark" style="height: 5.5rem;">Papel Offset 240g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-1">
+			<table class="table bg-white" style="border-radius: 0.5rem;">
+				<thead>
+					<tr>
+						<th><img src="images/papeis.png" style="width: 1.5rem;" class="mx-auto d-block mb-2"></th>
+						<td><button class="btn btn-dark" style="height: 5.5rem;">Papel Triplex 250g</button></td>
+					</tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+
+
 
 <hr>
+
+
 
 <h1 class="text-center"><strong>ENTENDENDO A NOMENCLATURA DAS CORES</strong></h1>
 <h3 class="text-center"><i>Veja a tabela e entenda o atributo de cada serviço</i></h3>
