--- a/cartao_.html
+++ b/cartao_.html
@@ -590,7 +590,7 @@
 						<strong>124,80</strong></button></a></td></tr>
 				<tr><th colspan="2">
 						<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
-						<strong>118,5</strong></button></a></th>
+						<strong>118,50</strong></button></a></th>
 					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
 				</thead>
 			</table>
@@ -688,7 +688,7 @@
 						<strong>216,00</strong></button></a></td></tr>
 					<tr><th colspan="2">
 						<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
-						<strong>205,2</strong></button></a></th>
+						<strong>205,20</strong></button></a></th>
 					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
 				</thead>
 			</table>	
@@ -791,7 +791,7 @@
 					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CLFO500</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação holografica </td></tr>
 					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0</button></td></tr>
-					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
 					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
 					<tr><th>UNIDADE</th><td>R$ 0,39</td></tr>
 					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
@@ -817,7 +817,7 @@
 					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
 					<tr><th>QUANTIDADE</th><td>100</td></tr>
 					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
-					<tr><th>UNIDADE</th><td>R$ 0,96</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,86</td></tr>
 					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
 						<strong>86,40</strong></button></a></td></tr>
 					<tr><th colspan="2">
@@ -1168,7 +1168,7 @@
 						<strong>199,20</strong></button></a></td></tr>
 					<tr><th colspan="2">
 						<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
-						<strong>113,20</strong></button></a></th></tr>
+						<strong>189,20</strong></button></a></th></tr>
 					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
 				</thead>
 			</table>
@@ -1279,7 +1279,7 @@
 						<strong>216,00</strong></button></a></td></tr>
 					<tr><th colspan="2">
 						<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
-						<strong>10,80</strong></button></a></th></tr>
+						<strong>205,20</strong></button></a></th></tr>
 					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
 				</thead>
 				</thead>
@@ -1430,7 +1430,7 @@
 <article class="container"> <!-- tabela 016 -->
 	<span class="row">
 		
-		<div class="col-sm mt-3"> <!-- 047 -->
+		<div class="col-sm mt-3"> <!-- 046 -->
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
@@ -1451,7 +1451,7 @@
 			</table>
 		</div>
 
-		<div class="col-sm mt-3"> <!-- 048 -->
+		<div class="col-sm mt-3"> <!-- 047 -->
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
@@ -1472,7 +1472,7 @@
 			</table>
 		</div>
 
-		<div class="col-sm mt-3"> <!-- 049 -->
+		<div class="col-sm mt-3"> <!-- 048 -->
 			<table class="table bg-white mt-3">
 				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
 				<tr><th colspan="2"><img src="cta/CS4X1100.jpg" class="mx-auto d-block"></th></tr>
@@ -1497,6 +1497,27 @@
 <article class="container"> <!-- tabela 017 -->
 	<span class="row">
 		
+		<div class="col-sm mt-3"> <!-- 049 -->
+			<table class="table bg-white mt-3">
+				<thead>
+				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+				<tr><th colspan="2"><img src="cta/CS4X1250.jpg" class="mx-auto d-block"></th></tr>
+				<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CS4X1250</strong></button></th></tr>
+				<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+				<tr><th>COR</th><td><button class="btn btn-info disabled btn-sm">4x1 </button></td></tr>
+				<tr><th>QUANTIDADE</th><td>100</td></tr>
+				<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+				<tr><th>UNIDADE</th><td>R$ 0,39</td></tr>
+				<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+					<strong>74,40</strong></button></a></td></tr>
+				<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>70,65</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
 		<div class="col-sm mt-3"> <!-- 050 -->
 			<table class="table bg-white mt-3">
 				<thead>
@@ -1518,6 +1539,96 @@
 			</table>
 		</div>
 
+		<div class="col-sm mt-3"> <!-- 051 -->
+			<table class="table bg-white mt-3">
+				<thead>
+				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+				<tr><th colspan="2"><img src="cta/CS4X4250.jpg" class="mx-auto d-block"></th></tr>
+				<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CS4X4250</strong></button></th></tr>
+				<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+				<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+				<tr><th>QUANTIDADE</th><td>250</td></tr>
+				<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+				<tr><th>UNIDADE</th><td>R$ 0,34</td></tr>
+				<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+					<strong>85,20</strong></button></a></td></tr>
+				<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>81,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha 018 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 052 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFHF100.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFHF100</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 300g <br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 1,40</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>140,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>133,40</strong></button></a></th></tr>
+						<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3">
+			<table class="table bg-white mt-3"> <!-- 053 -->
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFHF1000.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFHF1000</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 300g <br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,47</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>468,00</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>444,60</strong></button></a></th></tr>
+						<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 054 -->
+			<table class="table bg-white mt-3">
+				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+				<tr><th colspan="2"><img src="cta/CFHF250.jpg" class="mx-auto d-block"></th></tr>
+				<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFHF250</strong></button></th></tr>
+				<tr><th>PAPEL</th><td>Couchê brilho 300g<br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
+				<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+				<tr><th>QUANTIDADE</th><td>250</td></tr>
+				<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+				<tr><th>UNIDADE</th><td>R$ 1,22</td></tr>
+				<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+					<strong>304,80</strong></button></a></td></tr>
+				<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>289,50</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	
 	</span>
 </article>
 
