alt btn ref dark

--- a/cartao_.html
+++ b/cartao_.html
@@ -1509,7 +1509,7 @@
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
 					<tr><th colspan="2"><img src="cta/CFHF100.jpg" class="mx-auto d-block"></th></tr>
-					<tr><th colspan="2"><button class="btn btn-dark disabled btn-sm"><strong>CFHF100</strong></button></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF100</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 300g <br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
 					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
 					<tr><th>QUANTIDADE</th><td>100</td></tr>
@@ -1530,7 +1530,7 @@
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
 					<tr><th colspan="2"><img src="cta/CFHF1000.jpg" class="mx-auto d-block"></th></tr>
-					<tr><th colspan="2"><button class="btn btn-dark disabled btn-sm"><strong>CFHF1000</strong></button></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF1000</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 300g <br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
 					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
 					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
@@ -1550,7 +1550,7 @@
 			<table class="table bg-white mt-3">
 				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
 				<tr><th colspan="2"><img src="cta/CFHF250.jpg" class="mx-auto d-block"></th></tr>
-				<tr><th colspan="2"><button class="btn btn-dark disabled btn-sm"><strong>CFHF250</strong></button></th></tr>
+				<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF250</strong></button></th></tr>
 				<tr><th>PAPEL</th><td>Couchê brilho 300g<br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
 				<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
 				<tr><th>QUANTIDADE</th><td>250</td></tr>
