--- a/cartao_.html
+++ b/cartao_.html
@@ -50,6 +50,7 @@
 
 <h1 class="text-center"><strong>Cartões de Visita - dê um <i>"Tchan!"</i> no primeiro impacto</strong></h1>
 <h3 class="text-center mb-4"><i>confira abaixo a lista de papeis ofertados pela LABE</i></h3>
+
 	
 
 <article class="container"> <!-- linha001 -->
@@ -1548,10 +1549,11 @@
 
 		<div class="col-sm mt-3"> <!-- 054 -->
 			<table class="table bg-white mt-3">
+				<thead>
 				<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
 				<tr><th colspan="2"><img src="cta/CFHF250.jpg" class="mx-auto d-block"></th></tr>
 				<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF250</strong></button></th></tr>
-				<tr><th>PAPEL</th><td>Couchê brilho 300g<br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
+				<tr><th class="text-star">PAPEL</th><td>Couchê brilho 300g<br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
 				<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
 				<tr><th>QUANTIDADE</th><td>250</td></tr>
 				<tr><th>TAMANHO</th><td>87x47mm</td></tr>
@@ -1565,13 +1567,217 @@
 				</thead>
 			</table>
 		</div>
-
 	
 	</span>
 </article>
 
+<article class="container"> <!-- linha 019 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 055 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFHF50.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF50</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 300g<br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>50</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 1,73</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>86,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>82,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 056 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFHF500.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF500</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 300g<br> laminação fosca <br>com <strong>HOTSTAMPING</strong></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,72</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>361,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>343,15</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3">
+			<table class="table bg-white mt-3"> <!-- 057 -->
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFHF1000.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CFHF1000</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente e verso<br>e <strong>verniz localizado</strong> frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,21</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>214,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>204,05</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha 020 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 058 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CVL3000.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CVL3000</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente e verso<br>e <strong>verniz localizado</strong> frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>3.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,19</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>561,60</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>533,50</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 059 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CVL500.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CVL500</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente e verso<br>e <strong>verniz localizado</strong> frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,35</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>173,00</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>164,10</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 060 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/GVLF1.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>GVLF1</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente <br>e <strong>verniz localizado</strong> frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,18</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>181,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>172,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+</span>
+</article>
+
+<article class="container"> <!-- linha 021 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 061 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/GVLF2.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>GVLF2</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente <br>e <strong>verniz localizado</strong> frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-info disabled btn-sm">4x1 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,18</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>178,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>170,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 062 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/GVLF3.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>GVLF3</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente <br>e <strong>verniz localizado</strong> frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-white disabled btn-sm">4x0 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,17</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>174,00</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>165,30</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 063 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/GVLF4.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>GVLF4</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente <br>e <strong>verniz localizado</strong> frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,33</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>164,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>156,20</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
 
 
+	</span>
+</article>
 
 </body>
 </html>
