--- a/cartao_.html
+++ b/cartao_.html
@@ -1775,9 +1775,173 @@
 			</table>
 		</div>
 
+	</span>
+</article>
+
+<article class="container"> <!-- linha 22 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 064 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/GVLF5.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>GVLF5</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente <br>e <strong>verniz localizado</strong> frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-info disabled btn-sm">4x1 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,29</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>146,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>139,05</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 065 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/GVLF6.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>GVLF6</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong> frente <br>e <strong>verniz localizado</strong> frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-white disabled btn-sm">4x0 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,30</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>147,60</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>140,20</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 066 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CLF1000.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CLF1000</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong><br>frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,17</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>168,00</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>160,50</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
 
 	</span>
 </article>
 
-</body>
+<article class="container"> <!-- linha 023 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 067 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CLF500.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CLF500</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>laminação fosca</strong><br>frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,25</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>124,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>119,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 068 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CHVL1000.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CHVL1000</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>HOTSTAMPING </strong>com  <br>verniz localizado frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,53</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>529,30</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>502,70</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 069 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CHVL500.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>CHVL500</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br> <strong>HOTSTAMPING </strong>com  <br>verniz localizado frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,94</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>469,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>445,74</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha 024 -->
+	<span class="row">
+
+		<div class="col-sm mt-3"> <!-- 070 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/SV1000.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-dark btn-sm"><em>ref.:</em> &nbsp;<strong>SV1000</strong></button></th></tr>
+						<tr><th>PAPEL</th><td>Couchê brilho 300g<br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,94</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>469,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+					<a href="https://nubank.com.br/pagar/15spx0/rwGvfXoeKI" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+					<strong>445,74</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+</body>                                                                                       
 </html>
