--- a/iw/ibge/ibge_aula2.html
+++ b/iw/ibge/ibge_aula2.html
@@ -10,7 +10,7 @@
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" type="text/css" href="ibge.css">
+	<link rel="stylesheet" type="text/css" href="ibge_css.css">
 
 	<title>Formulário IBGE</title>
 
@@ -23,8 +23,8 @@
 	<h1 class="mt-3">Formulário IBGE</h1>
 	<hr>
 
-	<form class="form">
-		
+	<form class="form-control">
+
 		<label for="regiao">Região</label><br>
 
 			<select name="regiao" id="regiao" required>
