--- a/iw/ibge/ibge_aula.html
+++ b/iw/ibge/ibge_aula.html
@@ -32,12 +32,12 @@
 
 		<label for="estado">Estado</label><br>
   		<select name="estado" id="estado" class="form-control">
-  		<option disabled selected>-- Selecione a Região --</option>
+  		<option disabled selected>-- Selecione o Estado --</option>
   	</select><br>
 
 		<label for="cidade">Cidade</label><br>
   		<select name="cidade" id="cidade" class="form-control">
-  		<option disabled selected>-- Selecione a Região --</option>
+  		<option disabled selected>-- Selecione a Cidade --</option>
   	</select><br>
 
 <button class="btn btn-info btn-lg">Enviar</button><br>
