--- a/fominha/index.html
+++ b/fominha/index.html
@@ -5,12 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-	<title>Cardápio FOMINHA</title>
+	<title>Cardápio FOMINHA </title>
 
-	<!-- boot strap css -->
+
+		<!-- boot strap css -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
+		
 		<style type="text/css">
+			
 
 		img {
 			width: 150px;
@@ -82,13 +85,16 @@
 			margin-right: auto;
 		}
 
-	</style>
+		</style>
+
+		
+
 
 </head>
 
-<body>
+<body class="container">
 	
-<img src="mktplace/fominha.png"><br>
+<img src="img/fominha.png"><br>
 
 <table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
 	<thead>
@@ -217,8 +223,10 @@ agradecemos sua preferência!
 
 
 <div class="rounded bg-light mt-3 py-3">
-<a href="https://www.instagram.com/labedigital/?hl=pt-br" style="text-align: center;">LABE PANFLETO DIGITAL</a><br>
+<a href="https://www.instagram.com/labedigital/?hl=pt-br" style="text-align: center;">LABE DIGITAL</a><br>
 <p style="text-align: center;"><em>---------- Designer ----------</em></p><a style="margin-top: 0px;" href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%20Berg!"><h2 style="text-align: center;">Berg Nunes</h2></a></div><br><br>
+
+<script src="script/js.js"></script>
 
 </body>
 
