--- a/orc/10101.html
+++ b/orc/10101.html
@@ -163,11 +163,11 @@
 		<p class="text-center">LABE DIGITAL</p>
 
 
-		<footer>Quadra D - Presidente Kennedy - Fortaleza/CE</footer>
-
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body><br><br>
+
+<footer class="text-end">Presidente Kennedy - Fortaleza/CE</footer>
 
 </html>
