--- a/orc/10101.html
+++ b/orc/10101.html
@@ -48,7 +48,7 @@
 			  <tbody>
 			    <tr>
 			      <th scope="row">1</th>
-			      <td>Impressão DIGITAL papel offset 240g - caixa perfume 180/40/40 mm (prova)</td> <!-- descrição -->
+			      <td>Impressão DIGITAL papel offset 240g - caixa perfume 170/33/33 (prova)</td> <!-- descrição -->
 			      <td>01 unidade</td> <!-- quantidade -->
 			      <td>R$ 3,00</td> <!-- valor da unidade -->
 			      <td>R$ 3,00</td> <!-- valor parcial -->  
@@ -109,7 +109,7 @@
 			  <tbody>
 			    <tr>
 			      <th scope="row">1</th>
-			      <td>Impressão DIGITAL papel offset 240g - caixa perfume 180/40/40 mm (prova)</td> <!-- descrição -->
+			      <td>Impressão DIGITAL papel offset 240g - caixa perfume 170/33/33 mm (prova)</td> <!-- descrição -->
 			      <td>300 unidades</td> <!-- quantidade -->
 			      <td>R$ 2,80</td> <!-- valor da unidade -->
 			      <td>R$ 840,00</td> <!-- valor parcial -->  
