--- a/calcboot.html
+++ b/calcboot.html
@@ -27,9 +27,9 @@
 <body class="bg-info">
 
 	<article class="container mt-5">
-		
-		<div class="bg-dark text-center">
-			<h2 class="text-center text-white mb-2">Calculadora</h2>
+
+		<div class="bg-dark">
+			<h2 class="text-white mb-2" style="text-align="right"">Calculadora</h2>
 			<h1 id="resultado" class="btn-light text-dark m-1">0</h1>
 			<table class="table table-dark">
 				<tr>
