--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<title>BERG DESIGNER</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
 	</head>
-	<body>
-		<h1>Olá Mundo!</h1>
+	<body class="container bg-secondary">
+		<h1 class="mt-3">Olá Mundo!</h1>
 	</body>
 </html>
