--- a/centraldrive/index.html
+++ b/centraldrive/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
+    <style media="screen">
+    
+    h1, h2, h3, h4 {
+      text-align: center;
+    }
+
+    button {
+      width: 8rem;
+      height: 2.5rem;
+    }
+
+    img {
+      width: 5rem;
+      height: 5rem;
+      border-radius: 100%;
+    }
+
+    td, th, {
+      vertical-align: middle;
+      text-align: center;
+    }
+
+    </style>
+
     <title>Central Drive</title>
   </head>
 
