--- a/centraldrive/index.html
+++ b/centraldrive/index.html
@@ -29,7 +29,7 @@
       text-align: center;
     }
 
-    p {
+    .textcod {
       text-align: left;
     }
 
@@ -45,9 +45,9 @@
     <h1>Central Drive</h1>
     <h5>lista dos drivers</h5>
 
-    <br><hr>
+    ><hr>
 
-    <p><strong>"CÓDIGOS USADOS NO ZELLO"</strong><br><br>
+    <p class="textcod"><strong>"CÓDIGOS USADOS NO ZELLO"</strong><br><br>
 
 <strong>Drive 0</strong> - Sem Passageiro<br>
 
