--- a/rifa.html
+++ b/rifa.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>
-        Rifa CS
-    </h1>
-    
+    Rifa here!
+    <p>
+        1,2,3,4,5,6...
+    </p>
 </body>
 </html>
