adicção de numeral 01 a 100

--- a/rifa.html
+++ b/rifa.html
@@ -48,11 +48,125 @@
     </div>
   </nav>
 
-  <article class="container">
+  <article class="container bg-light">
 
-    <div>
-        <h3>01</h3>
-        <p>@livre</p>
+    <!-- <div class="text-center">
+        <h3>01</h3><p>@livre</p>
+    </div> -->
+
+    <div class="center">
+        <ol>
+            <li class="btn btn-success m-1"><h4>01</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>02</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>03</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>04</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>05</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>06</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>07</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>08</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>09</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>10</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>11</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>12</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>13</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>14</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>15</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>16</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>17</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>18</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>19</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>20</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>21</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>22</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>23</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>24</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>25</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>26</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>27</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>28</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>29</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>30</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>31</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>32</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>33</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>34</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>35</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>36</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>37</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>38</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>39</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>40</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>31</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>32</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>33</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>34</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>35</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>36</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>37</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>38</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>39</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>50</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>51</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>52</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>53</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>54</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>55</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>56</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>57</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>58</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>59</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>60</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>61</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>62</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>63</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>64</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>65</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>66</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>67</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>68</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>69</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>70</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>71</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>72</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>73</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>74</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>75</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>76</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>77</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>78</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>79</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>80</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>81</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>82</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>83</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>84</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>85</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>86</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>87</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>88</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>89</h4><h6>@livre</h6></li>
+
+            <li class="btn btn-success m-1"><h4>90</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>91</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>92</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>93</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>94</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>95</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>96</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>97</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>98</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>99</h4><h6>@livre</h6></li>
+            <li class="btn btn-success m-1"><h4>100</h4><h6>@livre</h6></li>
+            
+        </ol>
     </div>
 
 
