tentativa de carousel bootstrap

--- a/rifa.html
+++ b/rifa.html
@@ -9,6 +9,34 @@
     <title>Rifa CS</title>
 </head>
 <body>
+
+    <div class="container py-5">
+      <div class="carousel slide"
+            data-bs-slide="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item-active">
+                <img src="https://picsum.photos/1280/420?random=1" alt=""
+                class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://picsum.photos/1280/420?random=2" alt=""
+                class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://picsum.photos/1280/420?random=3" alt=""
+                class="d-block w-100">
+              </div>
+            </div>
+      </div>
+    </div>
+
+
+
+
+ 
+
+
+
    <h1>Cidiane Sena</h1>
 
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -168,7 +196,6 @@
             
         </ol>
     </div>
-
 
   </article>
 
